feat: improving cart shared email template

--- a/node/mail-templates/cartShared.html
+++ b/node/mail-templates/cartShared.html
@@ -120,6 +120,7 @@
             style="
               margin: 1em 0 0;
               font-size: 22px;
+              text-align: center;
               line-height: 32px;
               box-sizing: border-box !important;
               color: #000;
@@ -162,7 +163,6 @@
           </p>
         </div>
         <div
-          class="ph4-ns"
           style="
             font-size: 14px;
             line-height: 20px;
